--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iChat - Realtime Node Socket.io Chat App</title>
+    <title>VARTALAAP - Realtime Node Socket.io Chat App</title>
     <script defer src="http://localhost:8000/socket.io/socket.io.js"></script> <!--Server or client jude hain isse-->
     <script defer src = "js/client.js"></script>
     <link rel="stylesheet" href="css/style.css">
